# fia_cost_cap_risk_sim

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: METHODOLOGY.md
src/: dashboard.jsx  main.py  simulation.py
